# The-Office

./: DEV_QUICKSTART.md  DOCKER_README.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  run-docker-dev.sh  run-docker.sh
backend/: .dockerignore  Dockerfile  README.md  app.py  auth.py  chat.py  prompts.py  requirements.txt  test_routing.py  view_logs.py
backend/agents/: ceo.py  developer.py  hr.py
backend/notebooks/: test_o3.ipynb
backend/supreme/: supreme.py
frontend/: README.md  index.html
frontend-react/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  map.json  nginx.conf  package-lock.json  package.json
frontend-react/src/: App.css  App.tsx
frontend-react/src/classes/: OfficeCharacter.ts
frontend-react/src/components/: Chat.tsx  Controls.tsx  OfficeCanvas.tsx  SpeechBubble.tsx
frontend-react/src/constants/: index.ts
frontend-react/src/hooks/: useAssets.ts  useChat.ts  useGameState.ts
frontend-react/src/types/: index.ts
frontend/assets/: OfficeTiles.tsx  officeacces.tsx  officeacess.tsx  officechar.tsx  officeequip.tsx  officemap.json
frontend/css/: styles.css
frontend/js/: app.js  controller.js  game.js
